Run benchmarks on JDK 11 and JDK 16